Bug #13060
loader: fb-putimage fails silently even with debug flag set
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
fb-putimage will fail silently when given some PNG files even with the debug flag set, such as PNG files that use features that are unsupported or have other issues, such as corruption.
Updated by Andrew Stormont 5 months ago
Testing: I came up with this change after seeing loader silently fail to load a PNG and not having any idea why. With the change I was able to see that the PNG file was not being loaded because it was using an unsupported colour depth. Pointing it to a non-existent file also caused it to print out an error where before it would print out nothing. After fixing the colour depth I was able to load the PNG file without any problems.
Updated by Electric Monk 5 months ago
- Status changed from In Progress to Closed
- % Done changed from 0 to 100
git commit d45f07cb8d28ca0e38cd96d8f00243ba58192eec
commit d45f07cb8d28ca0e38cd96d8f00243ba58192eec Author: Andrew Stormont <astormont@racktopsystems.com> Date: 2020-11-25T09:25:26.000Z 13060 loader: fb-putimage fails silently even with debug flag set Reviewed by: Toomas Soome <tsoome@me.com> Reviewed by: Andy Fiddaman <andy@omniosce.org> Approved by: Robert Mustacchi <rm@fingolfin.org>